--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+.mbsc-eventcalendar {
+  height: 30% !important;
+}
+
+body::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)!important;
+  border-radius: 10px!important;
+  background-color: #4e4e4e!important;
+}
+
+body::-webkit-scrollbar
+{
+  width: 12px!important;
+  background-color: #4e4e4e!important;
+}
+
+body::-webkit-scrollbar-thumb
+{
+  border-radius: 10px!important;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3)!important;
+  background-color: #212529!important;
+}
+.mbsc-eventcalendar::-webkit-scrollbar-thumb{
+  border-radius: 10px !important;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3)!important;
+  background-color: #212529!important;
+
+}
